# drone

./: .gitignore  data_nowind_test01.csv
shfiles/: auto_start.sh  detect_planning.sh  keyboard.sh  planner.sh  record copy.sh  record.sh  record_cam_imu.sh  record_data.sh  record_sim.sh  rspx4.sh  rspx4_novins.sh  test.sh
src/apriltag_ros/include/apriltag_ros/: continuous_detector.h
src/apriltag_ros/launch/: xtdrone_detection_down.launch  xtdrone_detection_front_down.launch  xtdrone_detection_indoor1.launch  xtdrone_detection_single.launch
src/apriltag_ros/src/: continuous_detector.cpp  single_image_detector.cpp
src/planner/plan_manage/: CMakeLists.txt  package.xml
src/planner/plan_manage/launch/: default.rviz  exp_wind.rviz  loop.launch  loop_nuc.launch  random.launch  run_looptraj.launch  rviz_wind.launch  single_run_in_exp.launch
src/planner/plan_manage/src/: ego_replan_fsm.cpp  generator.cpp  traj_generator.cpp  traj_landing.cpp  traj_loop.cpp  traj_server.cpp
src/realflight_modules/VINS-Fusion/config/: drone.urdf  fast_drone_250.yaml  fast_drone_250_base.yaml  right.yaml  vins_rviz_config.rviz  xtdrone.yaml
src/realflight_modules/VINS-Fusion/vins_estimator/: CMakeLists.txt
src/realflight_modules/detectAndLanding/: CMakeLists.txt  package.xml
src/realflight_modules/detectAndLanding/src/: landing_test.cpp  publish_tag_pose.cpp  publish_tagpoint.cpp
src/realflight_modules/px4ctrl/: CMakeLists.txt
src/realflight_modules/px4ctrl/config/: body_T_cam0.yaml  body_T_cam0_xtdrone.yaml  body_T_camdown_xtdrone.yaml  ctrl_param_fpv.yaml  (+1 more)
(+41 files in other folders)
